--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import "bootswatch/dist/darkly/bootstrap.min.css";
+// TODO: Note: Replace ^[theme]^ (examples: darkly, slate, cosmo, spacelab, and superhero. See https://bootswatch.com for current theme names.)
+
 .App {
   text-align: center;
 }
