--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,151 @@
+@import "bootswatch/dist/darkly/bootstrap.min.css";
+// TODO: Note: Replace ^[theme]^ (examples: darkly, slate, cosmo, spacelab, and superhero. See https://bootswatch.com for current theme names.)
+
 body {
   margin: 0;
   font-family: "Nunito" !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url("../public/static/assets/images/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+$fontColor: #fff;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+  color: $fontColor;
+}
+a {
+  color: #000;
+  text-decoration: none !important;
+}
+
+.image-card-with-title {
+  width: 100%;
+  height: 100%;
+  min-height: 175px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.image-card-with-title {
+  .image-card-with-title__image {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #000;
+  }
+
+  .image-card-with-title__title {
+    font-weight: 600;
+    color: #000;
+    text-align: center;
+  }
+}
+
+.footer {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    height: 100%;
+  }
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #000;
+  color: white;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+  height: 67.5px;
+  h6 {
+    margin: 0;
+    color: $fontColor;
+  }
+}
+
+.rules-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
+
+  ul {
+    width: 50%;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: calc(40vh - 175px - 67.5px - 10px);
+    padding: 50px;
+    li {
+      text-align: start;
+      margin-bottom: 5px;
+      color: #000;
+    }
+  }
+}
+
+.ContactUsPage {
+  padding: 20px;
+  .contact-us-card {
+    p,
+    h4,
+    label {
+      color: #000;
+    }
+    padding: 50px 25px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+
+    .contact-map {
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar-brand {
+    font-size: 1rem;
+  }
+  .rules-card {
+    ul {
+      width: 80%;
+      padding: 25px;
+    }
+  }
+  .footer {
+    position: sticky;
+    top: 100%;
+  }
 }
