--- a/src/player.scss
+++ b/src/player.scss
@@ -36,6 +36,9 @@ $transition: 0.3s all ease;
     color: $white;
     // background: $white;
     backdrop-filter: blur(10px);
+    h3 {
+      color: #fff;
+    }
 
     audio {
       display: none;
@@ -252,6 +255,9 @@ $transition: 0.3s all ease;
   .MusicPlayer {
     flex-direction: column;
     .current-song {
+      h3 {
+        color: #000;
+      }
       width: 100%;
       background: $white;
       .song-name {
