Fix: Responsive History Video;

--- a/src/index.scss
+++ b/src/index.scss
@@ -323,6 +323,10 @@ a {
     }
   }
 
+  .full-screen-player {
+    width: 100%;
+  }
+
   .custom-video-player {
     flex-direction: column;
     flex-wrap: nowrap;
